Updates from Overleaf

--- a/NuMuCCsel/NuMuCCsel.tex
+++ b/NuMuCCsel/NuMuCCsel.tex
@@ -90,8 +90,9 @@
 
 \subsubsection{Run 1}
 \label{sssec:NuMUCCsel:INC:Run1}
+\begin{comment}
 \par The first run of the MicroBooNE detector to employ the trigger system is known as `run 1' and includes data taken between February to July of 2016. Run 1 and run 3 (see sec. \ref{sssec:NuMUCCsel:INC:Run3} are two runs presented in this document. Run 1, being the older data-set, is more well-understood and also has a higher statistics than run 3. 
-
+\end{comment}
 
 
 \begin{figure}
