--- a/NueCCsel/NueCCsel.tex
+++ b/NueCCsel/NueCCsel.tex
@@ -3,6 +3,10 @@
 The aim of the inclusive charged-current electron neutrino selection is to select electron neutrinos independently of their final state and energy. The selection performance is approximately 20\%, leading to 250-300 electron neutrino's in the Run 1-4 data-set. The purity without CRT is $\approx 35-40\%$ and with CRT $\approx 45-50\%$.
 
 \subsubsection{Pre-selection}
+The selection builds on top of the SliceID (\cref{sec:sliceID}). At first the following cuts are applied:
+\begin{itemize}
+    \item Reconstructed, space-charge corrected vertex inside a fiducial volume of \SI{10}{\cm} in $x$ and $y$ and $[ \SI{20}{\cm}, \SI{50}{\cm}]$ in $z$.
+\end{itemize}
 
 \begin{figure}
     \centering
