Updates from Overleaf

--- a/NueCCsel/NueCCsel.tex
+++ b/NueCCsel/NueCCsel.tex
@@ -6,6 +6,7 @@ The aim of the inclusive charged-current electron neutrino selection is to selec
 The selection builds on top of the SliceID (\cref{sec:sliceID}). At first the following cuts are applied:
 \begin{itemize}
     \item Reconstructed, space-charge corrected vertex inside a fiducial volume of \SI{10}{\cm} in $x$ and $y$ and $[ \SI{20}{\cm}, \SI{50}{\cm}]$ in $z$.
+    \item 
 \end{itemize}
 
 \begin{figure}
