Updates from Overleaf

--- a/NuMuCCsel/NuMuCCsel.tex
+++ b/NuMuCCsel/NuMuCCsel.tex
@@ -28,8 +28,25 @@
     \item \emph{pfp\_generation}: The generation of the PFParticle according to Pandora, i.e. how many parents the object on interest has in the slice.
 \end{itemize}
 
+\begin{comment}
 \subsubsection{Backgrounds}
 \label{sssec:NuMUCCsel:sel:bkgrnds}
+\end{comment}
+
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{NuMuCCsel/Images/run1/numu_pret_run1.pdf}
+    \caption{Caption}
+    \label{fig:numu_topo_pid}
+\end{figure}
+
+\subsection{Inclusive Selection}
+\label{ssec:NuMUCCsel:INC}
+
+\subsubsection{Signal Definition}
+\label{sssec:NuMUCCsel:INC:signaldef}
+\par A $\nu_{\mu}$ event is identified by, at least, one muon candidate originating from inside the fiducial volume of the detector. Additional tracks and showers may accompany the muon candidate; these assist in the proper reconstruction of vertex location and energy calculation but are not necessary in the inclusive selection. 
 
 \subsubsection{Event Selection}
 \label{sssec:NuMUCCsel:sel:evt}
@@ -73,20 +90,6 @@
     \item \emph{trk\_trk\_distance} $<$ 4 cm.
     \item \emph{pfp\_generation} = 2.
 \end{itemize}
-
-\begin{figure}
-    \centering
-    \includegraphics[width=\textwidth]{NuMuCCsel/Images/run1/numu_pret_run1.pdf}
-    \caption{Caption}
-    \label{fig:numu_topo_pid}
-\end{figure}
-
-\subsection{Inclusive Selection}
-\label{ssec:NuMUCCsel:INC}
-
-\subsubsection{Signal Definition}
-\label{sssec:NuMUCCsel:INC:signaldef}
-\par A $\nu_{\mu}$ event is identified by, at least, one muon candidate originating from inside the fiducial volume of the detector. Additional tracks and showers may accompany the muon candidate; these assist in the proper reconstruction of vertex location and energy calculation but are not necessary in the inclusive selection. 
 
 \subsubsection{Run 1}
 \label{sssec:NuMUCCsel:INC:Run1}
